<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:padding="5dp">

    <TextView
        android:id="@+id/_txActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Atividade"
        android:textColor="@color/background_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Atividade"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_txActivity" />


    <TextView
        android:id="@+id/_txAccessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Acessibilidade"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txActivity" />

    <TextView
        android:id="@+id/txAccessibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/Acessibilidade"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/_txAccessibility"
        app:layout_constraintTop_toBottomOf="@+id/txActivity" />

    <TextView
        android:id="@+id/_txType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Tipo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txAccessibility" />

    <TextView
        android:id="@+id/txType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Tipo"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/txAccessibility"
        app:layout_constraintTop_toBottomOf="@+id/txAccessibility" />


    <TextView
        android:id="@+id/_txParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Participantes"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txType" />

    <TextView
        android:id="@+id/txParticipants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Participantes"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/txType"
        app:layout_constraintTop_toBottomOf="@+id/txType" />


    <TextView
        android:id="@+id/_txPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/preco"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txParticipants" />

    <TextView
        android:id="@+id/txPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/preco"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/txParticipants"
        app:layout_constraintTop_toBottomOf="@+id/txParticipants" />

    <TextView
        android:id="@+id/txProgress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/Progresso"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txEnd" />


    <TextView
        android:id="@+id/_txData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicio"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txPrice" />

    <TextView
        android:id="@+id/txData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/txPrice"
        app:layout_constraintTop_toBottomOf="@+id/txPrice" />

    <TextView
        android:id="@+id/_txEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fim"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_txData" />

    <TextView
        android:id="@+id/txEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fim"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="@+id/txData"
        app:layout_constraintTop_toBottomOf="@+id/txData" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txProgress" />

</androidx.constraintlayout.widget.ConstraintLayout>